1. 优化内存占用 2. 修改命名风格